# ClannyGroupAdditionAgent

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
src/: baserow_api.rs  discord_api.rs  main.rs
