[package]
name = "ClannyGroupAdditionAgent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
chrono = "0.4.23"
